Fix accordion on mobile

--- a/wp-content/themes/zuellig/resources/styles/layouts/_header.scss
+++ b/wp-content/themes/zuellig/resources/styles/layouts/_header.scss
@@ -1,4 +1,5 @@
 header{
+
     position: relative;
     .navbar-toggler{
         background-color:#fff;
@@ -40,6 +41,7 @@ header{
             .nav-item:hover {
                 background:none!important;
             }
+
         }
 
 
@@ -91,12 +93,20 @@ header{
             margin-right: 20px;
             position: relative;
             .nav-link {
-                color: white;
+                color: #006AAB;
+                text-align: center;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 600;
+                line-height: normal;
                 &:hover{
                     color: #aaa;
                 }
             }
         }
+
+
+
     }
 
 
