--- a/wp-content/themes/zuellig/resources/styles/layouts/_responsive.scss
+++ b/wp-content/themes/zuellig/resources/styles/layouts/_responsive.scss
@@ -360,3 +360,86 @@
         color: #fff;
     }
 }
+
+
+
+@media(max-width: 1199px){
+    header .navbar .nav-item {
+        padding: 0 10px;
+    }
+}
+
+@media(max-width: 991px){
+    .button_btnHealthCare{
+        padding:20px
+    }
+    #navbarNavDropdown {
+        background-color: #f0f0f0 !important;
+    }
+    header .navbar .navbar-nav{
+        text-align:left;
+    }
+    header .navbar #menu-primary-navigation .sub-menu{
+        position: relative;
+    }
+    header .navbar #menu-primary-navigation .menu-item:hover {
+        background-color: transparent;
+    }
+    header .nav-item .sub-menu li {
+        list-style: none;
+    }
+    header .navbar .navbar-nav .nav-link{
+        display:inline-block;
+    }
+    header .menu-item-has-children::after {
+        content: '';
+        position:absolute;
+        left: 120px;
+        top: 11px;
+        border: solid #006AAB;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        padding: 4px;
+        transform: rotate(-45deg);
+        -webkit-transform: rotate(-45deg);
+    }
+    .accordion{
+        display: block;
+        height: auto;
+        overflow: visible;
+    }
+    .tab {
+        width:100%;
+        height: 88px;
+        overflow:hidden;
+    }
+    .tab.show{
+        height: 100%;
+        padding: 120px 40px;
+    }
+    .tab img{
+
+    }
+    .caption {
+        opacity: 1;
+        position: relative;
+        top: 0;
+        white-space: nowrap;
+        z-index: 2;
+        width: 100%;
+    }
+    .program_content{
+        display: block;
+    }
+    .div_heading-title,.caption p{
+        white-space: normal;
+    }
+    .program_menu{
+        top:0;
+    }
+    .program_menu-title{
+        display:none;
+    }
+
+
+}
